redis.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: redis2

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: redis2
  labels:
    name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      name: redis
  template:
    metadata:
      name: redis
      labels:
        name: redis
    spec:
      containers:
        - name: redis
          image: redis:latest
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: redis2
spec:
  selector:
    name: redis
  ports:
    - port: 6379
      targetPort: 6379
