deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: calvin

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blanja
  namespace: calvin
  labels:
    name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      name: frontend-pod
  template:
    metadata:
      name: blanja
      labels:
        name: frontend-pod
    spec:
      containers:
        - name: blanja
          image: calvinrahmat/blanja_front3
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: blanja-service
  namespace: calvin
spec:
  selector:
    name: frontend-pod
  ports:
    - port: 80
      targetPort: 80

###########
# backend #
###########
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-blanja
  namespace: calvin
  labels:
    name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      name: backend-pod
  template:
    metadata:
      name: backend-blanja
      labels:
        name: backend-pod
    spec:
      containers:
        - name: backend
          image: calvinrahmat/blanja_back2
          ports:
            - containerPort: 7123
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: calvin
spec:
  selector:
    name: backend-pod
  ports:
    - port: 7123
      targetPort: 7123

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blanja-ingress
  namespace: calvin
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/issuer: 'letsencrypt-prod'
spec:
  tls:
    - hosts:
        - blanja.site
      secretName: secret-blanja-tls
  rules:
    - host: blanja.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blanja-service
                port:
                  number: 80
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 7123

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blanja-ingress
  namespace: calvin
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/issuer: 'letsencrypt-prod'
spec:
  tls:
    - hosts:
        - www.blanja.site
      secretName: secret-blanja-tls
  rules:
    - host: www.blanja.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blanja-service
                port:
                  number: 80
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 7123
